# gnome-calendar

./: .buildconfig  .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  HACKING  HACKING.md  Makefile.am  NEWS  README  README.md  THANKS.md  TODO  TODO.md  autogen.sh  configure  configure.ac  configure_meson  gnome-calendar.doap  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Calendar.json
contrib/evolution/: e-cal-data-model-subscriber.c  e-cal-data-model.c  e-cal-data-model.h  meson.build
data/: Makefile.am  calendar.gresource.xml  gnome-calendar.desktop.in.in  gtk-style.css  gtk-styles.css  meson.build  org.gnome.Calendar.desktop.in  org.gnome.Calendar.desktop.in.in  org.gnome.Calendar.search-provider.ini  org.gnome.Calendar.search-provider.ini.in  org.gnome.Calendar.search-provider.ini.in.in  org.gnome.Calendar.service.in  org.gnome.calendar.gschema.xml  org.gnome.calendar.gschema.xml.in
data/appdata/: Makefile.am  meson.build  org.gnome.Calendar.appdata.xml.in  org.gnome.Calendar.appdata.xml.in.in
data/icons/: Makefile.am  gnome-calendar.blend  meson.build
data/theme/: Adwaita.css  gtk-styles.css
data/ui/: alarm-row.ui  calendar-management-dialog.ui  calendar-popover.ui  calendar-row.ui  date-chooser.ui  date-selector.ui  edit-calendar-page.ui  edit-dialog.ui  event-widget.ui  help-overlay.ui  menus.ui  month-cell.ui  month-popover.ui  month-view.ui  multi-choice.ui  nav_bar.ui  new-calendar-page.ui  new-event.ui  online-account-row.ui  quick-add-popover.ui  search-popover.ui  search-view.ui  sidebar.ui  source-dialog.ui  time-selector.ui  viewport.ui  weather-settings.ui  week-header.ui  week-view.ui  window.ui  year-view.ui
doc/reference/: Makefile.am  gnome-calendar-decl-list.txt  gnome-calendar-decl.txt  gnome-calendar-docs.sgml  gnome-calendar-sections.txt  gnome-calendar-undeclared.txt  gnome-calendar-undocumented.txt  gnome-calendar-unused.txt  gnome-calendar.args  gnome-calendar.hierarchy  gnome-calendar.interfaces  gnome-calendar.prerequisites  gnome-calendar.signals  gnome-calendar.types  meson.build
src/: Makefile.am  calendar.gresource.xml  css-code.h  e-cal-data-model.c  e-cell-renderer-color.c  e-cell-renderer-color.h  e-source-local.c  e-source-local.h  gb-scrolled-window.c  gcal-all-day-grid.c  gcal-all-day-grid.h  gcal-application.c  gcal-application.h  gcal-arrow-bin.c  gcal-arrow-bin.h  gcal-arrow-container.c  gcal-arrow-container.h  gcal-calendar-popover.c  gcal-calendar.c  gcal-calendar.h  gcal-clock.c  gcal-clock.h  gcal-context-private.h  gcal-context.c  gcal-context.h  gcal-date-chooser-day.c  gcal-date-chooser-day.h  gcal-date-chooser.c  gcal-date-chooser.h  gcal-date-entry.c  gcal-date-entry.h  gcal-date-selector.c  gcal-date-selector.h  gcal-day-view.c  gcal-day-view.h  gcal-days-grid.c  gcal-days-grid.h  gcal-debug.h.in  gcal-edit-dialog.c  gcal-edit-dialog.h  (+96 more)
src/appdata/: appdata.gresource.xml.in  meson.build  org.gnome.Calendar.metainfo.xml.in.in
src/attic/: gcal-month-view.c  gcal-month-view.h  gcal-month-view.ui
src/contrib/: meson.build
src/core/: gcal-calendar-monitor.c  gcal-calendar-monitor.h  gcal-calendar.c  gcal-calendar.h  gcal-clock.c  gcal-context.c  gcal-context.h  gcal-core-macros.h  gcal-event-attendee.c  gcal-event-attendee.h  gcal-event-list.c  gcal-event-list.h  gcal-event-organizer.c  gcal-event-organizer.h  gcal-event.c  gcal-event.h  gcal-global.c  gcal-global.h  gcal-log.c  gcal-manager.c  gcal-manager.h  gcal-night-light-monitor.c  gcal-night-light-monitor.h  gcal-range-tree.c  gcal-range-tree.h  gcal-range.c  gcal-range.h  gcal-recurrence.c  gcal-recurrence.h  gcal-shell-search-provider.c  gcal-shell-search-provider.h  gcal-time-zone-monitor.c  gcal-timeline-subscriber.c  gcal-timeline-subscriber.h  gcal-timeline.c  gcal-timeline.h  gcal-timer.c  gcal-timer.h  meson.build
src/gui/: css-code.h  gcal-alarm-row.c  gcal-alarm-row.h  gcal-alarm-row.ui  gcal-application.c  gcal-application.h  gcal-bidi.c  gcal-bidi.h  gcal-calendar-button.c  gcal-calendar-button.h  gcal-calendar-button.ui  gcal-calendar-combo-row-item.c  gcal-calendar-combo-row.c  gcal-calendar-combo-row.h  gcal-calendar-list.blp  gcal-calendar-list.c  gcal-calendar-list.h  gcal-calendar-list.ui  gcal-calendar-navigation-button.blp  gcal-calendar-navigation-button.c  gcal-calendar-navigation-button.h  gcal-calendar-navigation-button.ui  gcal-calendar-popover.c  gcal-calendar-popover.h  gcal-calendar-popover.ui  gcal-date-chooser-day.c  gcal-date-chooser.c  gcal-date-chooser.h  gcal-date-selector.c  gcal-date-selector.h  gcal-drop-overlay.c  gcal-drop-overlay.h  gcal-edit-dialog.c  gcal-edit-dialog.h  gcal-edit-dialog.ui  gcal-event-popover.blp  gcal-event-popover.c  gcal-event-popover.h  gcal-event-popover.ui  gcal-event-widget-pool.c  (+52 more)
src/search/: gcal-search-button.c  gcal-search-button.h  gcal-search-engine.c  gcal-search-engine.h  gcal-search-hit-event.c  gcal-search-hit-event.h  gcal-search-hit.c  gcal-search-hit.h  gcal-search-model.c  gcal-search-model.h  meson.build
src/theme/: Adwaita.css  events.css  meson.build  style-dark.css  style-hc-dark.css  style-hc.css  style.css  theme.gresource.xml
src/utils/: gcal-date-time-utils.c  gcal-date-time-utils.h  gcal-gui-utils.c  gcal-gui-utils.h  gcal-source-discoverer.c  gcal-source-discoverer.h  gcal-thread-utils.c  gcal-thread-utils.h  gcal-utils.c  gcal-utils.h  meson.build
src/views/: gcal-month-cell.c  gcal-month-cell.h  gcal-month-popover.c  gcal-month-view.c  gcal-month-view.h  gcal-range-tree.c  gcal-range-tree.h  gcal-view.c  gcal-view.h  gcal-week-grid.c  gcal-week-grid.h  gcal-week-header.c  gcal-week-header.h  gcal-week-header.ui  gcal-week-view.c  gcal-week-view.h  gcal-week-view.ui  gcal-year-view.c  (+3 more)
tests/: calendar.ics  gcal-simple-server.c  gcal-simple-server.h  gcal-stub-calendar.c  gcal-stub-calendar.h  meson.build  test-daylight-saving.c  test-discoverer.c  test-event-attendee.c  test-event-list.c  test-event.c  test-internals.c  test-manager.c  test-range-tree.c  test-range.c  test-server.c  test-utils.c
(+310 files in other folders)
